# RevEngine-Dooom

./: .gitmodules  README.md
ReVengine/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
ReVengine/ReVengine-Engine/: .gitignore  ReVengine.cpp  ReVengine.h  RenderDocCapSettings.cap  Rev_CoreSystems.cpp  Rev_CoreSystems.h
ReVengine/ReVengine-Engine/GameObjects/: BaseComponent.cpp  BaseComponent.h  GameObject.cpp  GameObject.h
ReVengine/ReVengine-Engine/GameObjects/Components/: CompCamera.cpp  CompCamera.h  CompCollision.cpp  CompCollision.h  CompInput.cpp  CompInput.h  CompRender.cpp  CompRender.h  CompTransform.cpp  CompTransform.h
ReVengine/ReVengine-Engine/Input/: InputManager.cpp  InputManager.h
ReVengine/ReVengine-Engine/Physics/: Physics.h  PhysicsImpl.h
ReVengine/ReVengine-Engine/Physics/PhysX/: CollisionCallback.h  Physics_PhysX.cpp  Physics_PhysX.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/: CMakeLists.txt  ReVengine.cpp  ReVengine.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/GameObjects/: GameObject.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/GameObjects/Components/: CompCamera.h  CompInput.h  CompRender.cpp  CompRender.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Input/: InputManager.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Physics/: Physics.cpp  PhysicsImpl.cpp  PhysicsImpl.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Rendering/: RenderWindow.cpp  Texture.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Rendering/Camera/: Camera.cpp  Camera.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Rendering/Direct3D11/: WindowHandler.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Rendering/HLSLshaders/: UI_vs.hlsl
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Rendering/HUD/: UI.cpp
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Rendering/HUD/ImGui/: ImGuiSetup.cpp  ImGuiSetup.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Rendering/Shaders/: TextureShader.h  TextureShader2D.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Scenes/: Scene.cpp  Scene.h  SceneManager.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Sound/: Rev_SoundImpl.cpp  Rev_SoundImpl.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Engine/Utils/: ReV_Mat.h  Vertex.h
ReVengine/ReVengine-Engine/ReVengine/ReVengine-Game/: CMakeLists.txt  Game.cpp
ReVengine/ReVengine-Engine/Rendering/: RenderWindow.cpp  RenderWindow.h  Texture.cpp  Texture.h
ReVengine/ReVengine-Engine/Rendering/Camera/: Camera.h
ReVengine/ReVengine-Engine/Rendering/Direct3D11/: WindowHandler.cpp  WindowHandler.h
ReVengine/ReVengine-Engine/Rendering/Direct3D11/Meshes/: Mesh.cpp  Mesh.h
ReVengine/ReVengine-Engine/Rendering/HLSLshaders/: PixelShader.hlsl  VertexShader.hlsl
ReVengine/ReVengine-Engine/Rendering/HUD/: UI.cpp  UI.h
ReVengine/ReVengine-Engine/Rendering/HUD/ImGui/: ImGuiSetup.cpp  ImGuiSetup.h
ReVengine/ReVengine-Engine/Rendering/Shaders/: BaseShader.cpp  BaseShader.h  TextureShader.cpp  TextureShader.h  TextureShader2D.cpp  TextureShader2D.h
ReVengine/ReVengine-Engine/ResourceManagement/: MemoryPool.cpp  MemoryPool.h  ResourceManager.cpp  ResourceManager.h
ReVengine/ReVengine-Engine/Scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
ReVengine/ReVengine-Engine/Sound/: Rev_Sound.H  Rev_Sound.cpp  Rev_SoundImpl.cpp  Rev_SoundImpl.h
ReVengine/ReVengine-Engine/Sound/SoLoud/: Rev_SoLoud.cpp  Rev_SoLoud.h
ReVengine/ReVengine-Engine/Utils/: MousePos.h
ReVengine/ReVengine-Game/: CMakeLists.txt  Game.cpp  GameSettings.h
ReVengine/ReVengine-Game/Objects/: HealthComp.cpp  HealthComp.h  ObjectSpawnerComp.cpp  ObjectSpawnerComp.h
ReVengine/ReVengine-Game/Objects/Enemies/: EnemyComp.cpp  EnemyComp.h  LookAtPlayerComp.cpp  LookAtPlayerComp.h
ReVengine/ReVengine-Game/Objects/Player/: PlayerComp.h
ReVengine/ReVengine-Game/Objects/Weapons/: BulletComp.cpp  BulletComp.h  GunComp.cpp  GunComp.h
